# pdf-layout-client

./: .gitignore  LICENSE  Makefile  pyproject.toml
pdf_layout_client/: __init__.py  _client.py
