[tool.poetry]
name = "pdf-layout-client"
version = "0.1.0"
description = ""
authors = ["n-kats <n-kats19890214@hotmail.co.jp>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.2"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
